app/assets/stylesheets/_buttons.scss
/* =============================================================================
  BUTTONS
============================================================================= */

.btn {
  border-radius: 2px;
  background: none;
  font-family: $sanstitle;
  font-size: 100%;
  font-weight: 700;
  text-align: center;
  text-transform: uppercase;
  line-height: 48px;
  border: 1px solid transparent;
  display: inline-block;
  padding: 0 24px;
  height: 48px;
  margin-bottom: 0;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;

  &:hover,
  &:focus {
    background: $gray1;
    text-decoration: none;
    outline: 0;
  }

  &:active,
  &.active {
    outline: 0;
    background-image: none;
    background: $gray2;
    &:focus {
      outline: 0;
    }
  }

  &.disabled,
  &[disabled],
  fieldset[disabled] & {
    cursor: not-allowed;
    pointer-events: none; // Future-proof disabling of clicks
    opacity: .2;
  }
}

.btn-primary {
  @extend .btn;
  background: $blue;
  color: $white;

  &:hover,
  &:focus {
    background: darken($blue, 5%);
  }

  &:active,
  &.active {
    background: darken($blue, 10%);
  }

  &.disabled,
  &[disabled],
  fieldset[disabled] & {
    cursor: not-allowed;
    pointer-events: none; // Future-proof disabling of clicks
    opacity: .1;
  }
}

.btn-secondary {
  @extend .btn;
  background: $gray4;
  color: $white;

  &:hover,
  &:focus {
    background: opacify($gray4, 0.01);
  }

  &:active,
  &.active {
    background: opacify($gray4, 0.05);
  }

}


.btn-add,
.btn-add-secondary {
  font-family: $sans;
  border-radius: 50%;
  background: $blue;
  font-size: 27px;
  font-weight: 300 !important;
  color: $white;
  line-height: 48px;
  text-align: center;
  display: inline-block;
  vertical-align: middle;
  height: 48px;
  width: 48px;

  &.fixed {
    position: fixed;
    top: 30px;
  }
}

.btn-add-secondary {
  background: $black;
}

.btn-link {
  @extend .btn;
  background: none !important;
  color: $gray3;
  padding: 5px;
  height: auto;
  line-height: inherit;

  &:hover,
  &:focus {
    color: $gray4;
  }
}

.btn-href {
  display: inline-block;
  color: inherit;
  line-height: inherit;
  padding: 5px;
  white-space: nowrap;
}

.btn-toggle {
  border-radius: 50%;
  background: image-url("arr-select-down-inv.png") no-repeat center 5px $gray3;
  color: $white;
  line-height: 25px;
  text-align: center;
  display: inline-block;
  vertical-align: middle;
  width: 25px;
  height: 25px;
  cursor: pointer;

  &.up {
    background-image: image-url("arr-select-up-inv.png");

  }
}

.btn-danger {
  @extend .btn-primary;
  background: $red;

  &:hover,
  &:focus {
    background: darken($red, 5%);
  }

  &:active,
  &.active {
    background: darken($red, 10%);
  }
}

.pager {
  color: $black;
  font-size: 20px;
  line-height: 20px;
  font-weight: 300;
  vertical-align: baseline;
}

[class^="btn"] + [class^="btn"] {
  margin-left: 30px;
}

